--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "module-a": "sakshigupta/module-a.git#webpack",
     "module-b": "sakshigupta/module-b.git#webpack",
+    "@react/react-spectrum": "^2.12.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0"
