--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "@babel/preset-react": "^7.0.0",
-    "parcel-bundler": "^1.12.3"
+    "@babel/preset-react": "^7.0.0"
   },
   "dependencies": {
     "module-a": "https://github.com/sakshigupta/module-a.git",
